--- a/templates/home.html
+++ b/templates/home.html
@@ -90,7 +90,7 @@
     <main>
         <div class="button-container">
             <button class="prediction" onclick="window.location.href='prediction'">Prediction</button>
-            <button class="show-data" onclick="window.location.href='showdata'">Show Data</button>
+            <button class="showdata" onclick="window.location.href='showdata'">Show Data</button>
         </div>
     </main>
 </body>
