--- a/templates/showdata.html
+++ b/templates/showdata.html
@@ -8,7 +8,6 @@
             background-color: #000;
             color: #fff;
             font-family: Arial, sans-serif;
-            background-image: url("https://wallpapercave.com/wp/wp12407295.jpg")
         }
 
         table {
@@ -25,7 +24,7 @@
 
         th {
             background-color: #555;
-            color: #090909;
+            color: #fff;
         }
 
         tr:hover {
